chandeliers-lus/tests/compile_fail/ui/tc/ops/binop-mismatch.rs
chandeliers_lus::decl! {
    const N : int = 5 + 0.1;
}

chandeliers_lus::decl! {
    node foo(i : int) returns (o : float);
    let
        o = i + 1 + 4 + 0.5;
    tel
}

chandeliers_lus::decl! {
    const B : bool = (1 + 1 = (true or false))
}

fn main() {}
