chandeliers-lus/tests/compile_fail/ui/tc/ops/binop-mismatch.stderr
error: Binary operator `+` expects arguments of the same type
 --> tests/compile_fail/ui/tc/ops/binop-mismatch.rs:3:21
  |
3 |     const N : int = 5 + 0.1;
  |                     ^^^^^^^
  |
note: The left-hand-side is found to be of type int
 --> tests/compile_fail/ui/tc/ops/binop-mismatch.rs:3:21
  |
3 |     const N : int = 5 + 0.1;
  |                     ^
note: The right-hand-side is found to be of type float
 --> tests/compile_fail/ui/tc/ops/binop-mismatch.rs:3:25
  |
3 |     const N : int = 5 + 0.1;
  |                         ^^^

error: Binary operator `+` expects arguments of the same type
 --> tests/compile_fail/ui/tc/ops/binop-mismatch.rs:9:13
  |
9 |         o = i + 1 + 4 + 0.5;
  |             ^^^^^^^^^^^^^^^
  |
note: The left-hand-side is found to be of type int
 --> tests/compile_fail/ui/tc/ops/binop-mismatch.rs:9:13
  |
9 |         o = i + 1 + 4 + 0.5;
  |             ^^^^^^^^^
note: The right-hand-side is found to be of type float
 --> tests/compile_fail/ui/tc/ops/binop-mismatch.rs:9:25
  |
9 |         o = i + 1 + 4 + 0.5;
  |                         ^^^

error: Binary operator `=` expects arguments of the same type
  --> tests/compile_fail/ui/tc/ops/binop-mismatch.rs:14:23
   |
14 |     const B : bool = (1 + 1 = (true or false))
   |                       ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: The left-hand-side is found to be of type int
  --> tests/compile_fail/ui/tc/ops/binop-mismatch.rs:14:23
   |
14 |     const B : bool = (1 + 1 = (true or false))
   |                       ^^^^^
note: The right-hand-side is found to be of type bool
  --> tests/compile_fail/ui/tc/ops/binop-mismatch.rs:14:31
   |
14 |     const B : bool = (1 + 1 = (true or false))
   |                               ^^^^^^^^^^^^^^^
